tests/language_modules/06_arrays/valid/array_return.vf
module ArrayReturn

function values() returns Array<Integer, 3>
is
    return [1, 2, 3]
end values

end ArrayReturn