tests/language_modules/06_arrays/invalid_semantics/boolean_index.vf
module BooleanIndex

procedure main()
is
    let values: Array<Integer, 3> = [1, 2, 3]
    check values[true] = 1
end main

end BooleanIndex